delete json folder