@@ -13,7 +13,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
-
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.9.2'
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-suite-api', version: '1.9.2'
+    //testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.8.2'
     implementation 'org.json:json:20220924'
     testImplementation 'io.rest-assured:rest-assured:5.2.0'
     testImplementation 'io.rest-assured:json-path:5.2.0'
@@ -21,9 +23,27 @@ dependencies {
     implementation 'io.rest-assured:rest-assured-common:5.2.0'
     implementation 'io.rest-assured:rest-assured-all:5.2.0'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    implementation group: 'org.apache.maven.plugins', name: 'maven-surefire-report-plugin', version: '3.0.0'
+    testImplementation group: 'io.qameta.allure', name: 'allure-junit5', version: '2.21.0'
+    // Dependencia de SLF4J API
+    implementation 'org.slf4j:slf4j-api:1.7.30'
 
+    // Dependencia de Logback como proveedor de registro
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
 }
 
 test {
+
+    //jvmArgs '--enable-preview'
     useJUnitPlatform()
+    /*useJUnitPlatform {
+        // includeEngines("junit-jupiter", "junit-vintage")
+        // excludeEngines("custom-engine")
+
+        // includeTags("fast")
+        excludeTags("slow")
+    }
+    testLogging {
+        events("passed", "skipped", "failed")
+    }*/
 }
